@@ -23,7 +23,7 @@ taskset -acp 0-3 4456
 
 # Start up commands
 
-## Media Driver
+## Component initiator
 
 ```shell
 java -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Xmx2g -Xms2g -jar ~/apps/media-driver.jar
@@ -40,6 +40,18 @@ java -jar ~/apps/artio-initiator.jar
 taskset -ca 6-8 java -jar ~/apps/artio-initiator.jar
 ```
 
+
+## Component acceptor
+
+```shell
+java -Dartio_demo.acceptor.engine=true -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Xmx2g -Xms2g -jar ~/apps/media-driver.jar
+taskset -ca 15-17 java -Dartio_demo.acceptor.engine=true -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Xmx2g -Xms2g -jar ~/apps/media-driver.jar
+```
+
+```shell
+java -Dartio_demo.acceptor.engine=true -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Xmx2g -Xms2g --add-opens java.base/sun.nio.ch=ALL-UNNAMED -Dfix.core.receiver_buffer_size=1048576 -Dfix.core.sender_socket_buffer_size=16777216 -Dfix.core.receiver_socket_buffer_size=16777216 -jar ~/apps/fix-engine.jar
+taskset -ca 19-21 java -Dartio_demo.acceptor.engine=true -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Xmx2g -Xms2g --add-opens java.base/sun.nio.ch=ALL-UNNAMED -Dfix.core.receiver_buffer_size=1048576 -Dfix.core.sender_socket_buffer_size=16777216 -Dfix.core.receiver_socket_buffer_size=16777216 -jar ~/apps/fix-engine.jar
+```
 
  
 
